Load transaction-editor data from parent component

--- a/src/app/workspaces/land-transactions/transactions-main-page/parts/land-transaction-tabbed-view.component.html
+++ b/src/app/workspaces/land-transactions/transactions-main-page/parts/land-transaction-tabbed-view.component.html
@@ -4,7 +4,8 @@
 
 <mat-tab-group [(selectedIndex)]="selectedTabIndex">
   <mat-tab label="Información del trámite">
-    <emp-land-transaction-editor>
+    <emp-land-transaction-editor
+      [transaction]="transaction">
 
     </emp-land-transaction-editor>
   </mat-tab>
