Add e-sign-modal component

--- a/src/app/workspaces/land-transactions/e-sign-main-page/e-sign-main-page.component.html
+++ b/src/app/workspaces/land-transactions/e-sign-main-page/e-sign-main-page.component.html
@@ -72,8 +72,16 @@
     <emp-land-workflow-commander
       [transactionList]="displayWorkflowCommanderOption === WorkflowCommanderOptions.ReceiveTransactions ? [] : selectedTransactions"
       [canEditList]="displayWorkflowCommanderOption !== WorkflowCommanderOptions.ExecuteCommand"
-      (closeEvent)="onOptionModalClosed()">
+      (closeEvent)="onWorkflowCommanderClosed()">
 
     </emp-land-workflow-commander>
 
 </emp-ng-modal-window>
+
+
+<emp-land-e-sign-modal *ngIf="displayESignOption"
+  [operation]="displayESignOption"
+  [transactionList]="selectedTransactions"
+  (closeEvent)="onESignModalClosed()">
+
+</emp-land-e-sign-modal>
