Add registrationTime field to TransactionDescriptor interface and transactions list

--- a/src/app/views/land-list/land-list-items/transaction-list-item.component.html
+++ b/src/app/views/land-list/land-list-items/transaction-list-item.component.html
@@ -1,30 +1,38 @@
 <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="8px" fxLayoutGap.gt-xs="32px">
 
   <div fxFlex="35%">
-    <div class="label">Tipo de trámite</div>
+    <div class="label nowrap">Tipo de trámite</div>
     <div class="primary-text nowrap"><strong>{{transaction.subtype}}</strong></div>
     <div>{{transaction.type}}</div>
   </div>
 
-  <div fxFlex="20%">
+  <div fxFlex="25%">
     <div *ngIf="transaction?.transactionID">
-      <div class="label">Trámite RPP</div>
+      <div class="label nowrap">Trámite RPP</div>
       <div>
-        <div class="primary-text nowrap"><strong>{{transaction?.transactionID}}</strong></div>
-        <div>{{transaction?.presentationTime | dateTimeFormat}} &nbsp; <strong>{{transaction.internalControlNo}}</strong></div>
+        <div class="primary-text nowrap"><strong>{{transaction?.transactionID}}</strong>  &nbsp; {{transaction.internalControlNo}}</div>
+
+        <div *ngIf="transaction.presentationTime" fxLayout="row" class="nowrap">
+          <div class="underline-text" fxFlex="60px">Presentado:</div>
+          {{transaction?.presentationTime | dateTimeFormat: 'DMY HH:mm'}}
+        </div>
+        <div *ngIf="transaction.registrationTime" fxLayout="row" class="nowrap">
+          <div class="underline-text" fxFlex="60px">Registrado:</div>
+          {{transaction?.registrationTime | dateTimeFormat: 'DMY HH:mm'}}
+        </div>
       </div>
     </div>
   </div>
 
   <div fxFlex="20%">
-    <div class="label">Lo tiene:</div>
-    <div class="primary-text nowrap"><strong>{{transaction.assignedToName}}</strong></div>
+    <div class="label nowrap">Lo tiene:</div>
+    <div class="primary-text"><strong>{{transaction.assignedToName}}</strong></div>
     <div>{{transaction.statusName}}</div>
   </div>
 
-  <div fxFlex="20%">
+  <div fxFlex="15%">
     <ng-container *ngIf="transaction.nextStatusName !== 'No determinado'">
-      <div class="label">Siguiente estado:</div>
+      <div class="label nowrap">Siguiente estado:</div>
       <div>{{transaction.nextStatusName}}</div>
     </ng-container>
   </div>
