--- a/src/styles/general-styles.scss
+++ b/src/styles/general-styles.scss
@@ -404,6 +404,11 @@ textarea:focus {
   font-weight: 600;
 }
 
+.underline-text {
+  text-decoration: underline;
+}
+
+
 .error-indicator-text {
   color: $warning-color;
   text-decoration: underline;
