--- a/src/app/workspaces/land-transactions/e-sign-main-page/e-sign-main-page.component.html
+++ b/src/app/workspaces/land-transactions/e-sign-main-page/e-sign-main-page.component.html
@@ -14,6 +14,7 @@
       [selectedItemUID]="selectedTransaction.uid ?? null"
       [isLoading]="isLoading"
       [statusList]="eSignStatusList"
+      [canSelectStatus]="true"
       [operationsList]="eSignOperationList"
       (landExplorerEvent)="onESignExplorerEvent($event)">
 
