--- a/src/app/views/recordable-subjects/no-property/no-property-editor.component.html
+++ b/src/app/views/recordable-subjects/no-property/no-property-editor.component.html
@@ -19,7 +19,7 @@
       </div>
 
       <div fxFlex>
-        <label>Distrito:</label>
+        <label>Oficialía:</label>
         <emp-ng-select formControlName="recorderOfficeUID"
           [items]="recorderOfficeList"
           [showError]="formHelper.isControlInvalid(form.controls.recorderOfficeUID)">
