--- a/src/app/views/registration/instrument-book-entries/instrument-book-entry-list.component.html
+++ b/src/app/views/registration/instrument-book-entries/instrument-book-entry-list.component.html
@@ -17,7 +17,7 @@
       <td mat-cell *matCellDef="let row"> {{ row.recordingTime | dateTimeFormat: 'DMY HH:mm' }} </td>
     </ng-container>
     <ng-container matColumnDef="recorderOfficeName">
-      <th mat-header-cell *matHeaderCellDef> Distrito </th>
+      <th mat-header-cell *matHeaderCellDef> Oficialía </th>
       <td mat-cell *matCellDef="let row"> {{ row.recorderOfficeName }} </td>
     </ng-container>
     <ng-container matColumnDef="recordingSectionName">
