--- a/src/app/views/transactions/transaction-header/transaction-header.component.html
+++ b/src/app/views/transactions/transaction-header/transaction-header.component.html
@@ -70,7 +70,7 @@
       </div>
 
       <div [fxFlex]="100/3">
-        <label>Distrito:</label>
+        <label>Oficialía:</label>
         <emp-ng-select formControlName="filingOffice"
           [items]="filingOfficeList"
           [showError]="formHelper.isControlInvalid(form.controls.filingOffice)">
