--- a/src/styles/general-styles.scss
+++ b/src/styles/general-styles.scss
@@ -551,6 +551,19 @@ i.disabled {
   color: $tag-default-color;
   padding: 4px 8px;
   width: fit-content;
+  white-space: nowrap;
+
+  &.tag-base {
+    background-color: $white;
+    color: $tag-default-color;
+    border: 1px solid $tag-default-color;
+  }
+
+  &.tag-base-warning {
+    background-color: $white;
+    color: $tag-warning-color;
+    border: 1px solid $tag-warning-color;
+  }
 
   &.tag-info {
     background-color: $tag-info-background-color;
@@ -558,18 +571,28 @@ i.disabled {
   }
 
   &.tag-error {
-    background-color:$tag-error-background-color;
+    background-color: $tag-error-background-color;
     color: $white;
   }
 
   &.tag-warning {
-    background-color: $tag-warning-background-color;
+    background-color: $tag-warning-color;
     color: $white;
   }
 
   &.tag-small {
-    font-size: 8px;
+    font-size: 0.5rem;
+    line-height: 0.75rem;
     margin: 0 8px;
+    padding: 4px 8px;
+  }
+
+  &.tag-medium {
+    font-size: 0.75rem;
+    line-height: 1rem;
+    font-weight: 500;
+    margin: 0 8px;
+    padding: 4px 8px;
   }
 }
 
@@ -578,8 +601,12 @@ a.tag {
 
   &:hover {
     background-color: darken($tag-default-background-color, 4%);
-    color: $tag-default-color;
+    color: $primary-color-light;
     cursor: pointer;
+
+    &.tag-base {
+      background-color: lighten($tag-default-color, 55%);
+    }
 
     &.tag-info {
       background-color: darken($tag-info-background-color, 4%);
@@ -592,7 +619,7 @@ a.tag {
     }
 
     &.tag-warning {
-      background-color: darken($tag-warning-background-color, 4%);
+      background-color: darken($tag-warning-color, 4%);
       color: $white;
     }
   }
