--- a/src/app/views/registration/instrument-book-entries/instrument-book-entry-creator.component.html
+++ b/src/app/views/registration/instrument-book-entries/instrument-book-entry-creator.component.html
@@ -8,7 +8,8 @@
         <label>Registrar en:</label>
         <emp-ng-select formControlName="recorderOffice"
           [items]="recorderOfficeList"
-          [showError]="formHelper.isControlInvalid(form.controls.recorderOffice)">
+          [showError]="formHelper.isControlInvalid(form.controls.recorderOffice)"
+          (changes)="onRecorderOfficeChange($event)">
         </emp-ng-select>
       </div>
       <div [fxFlex]="100/3">
