Add recorderOfficeUID field to Transaction and ESignRequests Queries

--- a/src/app/views/land-list/land-explorer/land-explorer.component.html
+++ b/src/app/views/land-list/land-explorer/land-explorer.component.html
@@ -29,6 +29,7 @@
     <div class="card-header-options">
 
       <emp-land-list-actions
+        [queryRecorderOffice]="query.recorderOfficeUID"
         [queryStatus]="query.status"
         [queryKeywords]="query.keywords"
         [statusList]="statusList"
