Add validations in transaction and e-sign filters

--- a/src/app/views/land-list/land-explorer/land-explorer.component.html
+++ b/src/app/views/land-list/land-explorer/land-explorer.component.html
@@ -29,9 +29,8 @@
     <div class="card-header-options">
 
       <emp-land-list-actions
-        [queryRecorderOffice]="query.recorderOfficeUID"
-        [queryStatus]="query.status"
-        [queryKeywords]="query.keywords"
+        [query]="query"
+        [recorderOfficeList]="recorderOfficeList"
         [statusList]="statusList"
         [displayStatusSelect]="canSelectStatus"
         [displayReceiveButton]="canReceive"
