--- a/src/app/workspaces/land-transactions/e-sign-main-page/e-sign-main-page.component.html
+++ b/src/app/workspaces/land-transactions/e-sign-main-page/e-sign-main-page.component.html
@@ -9,6 +9,7 @@
     <emp-land-explorer
       [title]="titleWithStatus"
       [explorerType]="landExplorerTypes.ESign"
+      [recorderOfficeList]="recorderOfficeList"
       [query]="query"
       [itemsList]="transactionList"
       [selectedItemUID]="selectedTransaction.uid ?? null"
