--- a/src/app/workspaces/land-transactions/transactions-main-page/transactions-main-page.component.html
+++ b/src/app/workspaces/land-transactions/transactions-main-page/transactions-main-page.component.html
@@ -9,6 +9,7 @@
     <emp-land-explorer
       [title]="currentView?.title"
       [explorerType]="landExplorerTypes.Transaction"
+      [recorderOfficeList]="recorderOfficeList"
       [query]="query"
       [itemsList]="transactionList"
       [selectedItemUID]="selectedTransaction.uid ?? null"
