--- a/src/app/views/registration/recording-acts/recording-act-editor.component.html
+++ b/src/app/views/registration/recording-acts/recording-act-editor.component.html
@@ -44,6 +44,7 @@
           <div fxFlex="50" fxFlex.lt-md="100">
 
             <input formControlName="operationAmount" empNgCurrency
+              [empNgCurrencyFractionDigitMax]="operationAmountDigitsMax"
               [empNgCurrencyCode]="getCurrencyCode()"
               [empNgCurrencyDisplaySymbol]="getCurrencyCode() !== '' ? 'symbol-narrow' : ''"
               type="text" class="text-box"
