--- a/src/app/workspaces/land-transactions/transactions-main-page/transactions-main-page.component.html
+++ b/src/app/workspaces/land-transactions/transactions-main-page/transactions-main-page.component.html
@@ -82,7 +82,7 @@
     <emp-land-workflow-commander *ngSwitchDefault
       [transactionList]="displayOptionModalSelected === 'ReceiveTransactions' ? [] : selectedTransactions"
       [canEditList]="displayOptionModalSelected !== 'ExecuteCommand'"
-      (closeEvent)="onOptionModalClosed()">
+      (workflowCommanderEvent)="onOptionModalClosed()">
 
     </emp-land-workflow-commander>
 
