Update to typescript 4.8.2 and rxjs 7.8.1+ Rfx functions

--- a/src/app/main-layout/main-layout.component.html
+++ b/src/app/main-layout/main-layout.component.html
@@ -12,7 +12,7 @@
 
 
     <mat-sidenav #sidenavLeft class="sidenav-left" mode="side" disableClose="true"
-      [opened]="appLayoutConfig.displayAsideLeft">
+      [opened]="false">
 
     </mat-sidenav>
 
