--- a/src/styles/angular-material-theme.scss
+++ b/src/styles/angular-material-theme.scss
@@ -12,7 +12,7 @@
 
 $primary-font-family: "'Work Sans', sans-serif" !default;
 
-$empiria-land-app-typography: mat.define-typography-config(
+$empiria-land-app-typography: mat.define-legacy-typography-config(
   $font-family: $primary-font-family,
   $headline: mat.define-typography-level(24pt, 34pt, 400),
   $title: mat.define-typography-level(14pt, 20pt, 500),
@@ -27,7 +27,16 @@ $empiria-land-app-typography: mat.define-typography-config(
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
 // Also applies custom typography that allow use of angular material style classes in html items.
-@include mat.core($empiria-land-app-typography);
+// TODO(v15): As of v15 mat.legacy-core no longer includes default typography styles.
+//  The following line adds:
+//    1. Default typography styles for all components
+//    2. Styles for typography hierarchy classes (e.g. .mat-headline-1)
+//  If you specify typography styles for the components you use elsewhere, you should delete this line.
+//  If you don't need the default component typographies but still want the hierarchy styles,
+//  you can delete this line and instead use:
+//    `@include mat.legacy-typography-hierarchy($empiria-land-app-typography);`
+@include mat.all-legacy-component-typographies($empiria-land-app-typography);
+@include mat.legacy-core();
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
@@ -44,7 +53,7 @@ $empiria-land-app-theme: mat.define-light-theme($empiria-land-app-primary, $empi
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include mat.all-component-themes($empiria-land-app-theme);
+@include mat.all-legacy-component-themes($empiria-land-app-theme);
 
 // Apply custom typography to all angular material components.
-@include mat.all-component-typographies($empiria-land-app-typography);
+@include mat.all-legacy-component-typographies($empiria-land-app-typography);
